--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
-background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
+background-image: url('https://img.freepik.com/foto-gratis/pintura-lago-montana-montana-al-fondo_188544-9126.jpg?size=626&ext=jpg&ga=GA1.1.1222169770.1702425600&semt=sph');
 background-size: cover;
 background-repeat: no-repeat;
 height: 100%;
@@ -20,13 +20,13 @@ height: 370px;
 margin-top: auto;
 margin-bottom: auto;
 width: 400px;
-background-color: rgba(0,0,0,0.5) !important;
+background-color: rgba(11, 32, 41, 0.5) !important;
 }
 
 .social_icon span{
 font-size: 60px;
 margin-left: 10px;
-color: #FFC312;
+color: #4cacc9;
 }
 
 .social_icon span:hover{
@@ -38,7 +38,7 @@ cursor: pointer;
 color: white;
 }
 
-.social_icon{
+.social_icon{ 
 position: absolute;
 right: 20px;
 top: -45px;
@@ -46,8 +46,8 @@ top: -45px;
 
 .input-group-prepend span{
 width: 50px;
-background-color: #FFC312;
-color: black;
+background-color: rgb(18, 180, 255);
+color: rgb(0, 0, 0);
 border:0 !important;
 }
 
@@ -71,13 +71,13 @@ margin-right: 5px;
 
 .login_btn{
 color: black;
-background-color: #FFC312;
+background-color: #37c0e2;
 width: 100px;
 }
 
 .login_btn:hover{
 color: black;
-background-color: white;
+background-color:rgb(39, 196, 175);
 }
 
 .links{
